// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton colors renders correct colors for { disabled: false, checked: false, validationState: 'default' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #444;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #444;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
>
  <div
    class=""
  >
    <input
      class="c2"
      fill="#444"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: false, validationState: 'warning' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #c25400;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #c25400;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
>
  <div
    class=""
  >
    <input
      class="c2"
      fill="#c25400"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: true, validationState: 'default' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #0073b6;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #0073b6;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2"
      fill="#0073b6"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: false, checked: true, validationState: 'warning' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #c25400;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #c25400;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  for="test-radio"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2"
      fill="#c25400"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: false, validationState: 'default' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #444;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #444;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
>
  <div
    class=""
  >
    <input
      class="c2"
      disabled=""
      fill="#444"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: false, validationState: 'warning' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #c25400;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #c25400;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
>
  <div
    class=""
  >
    <input
      class="c2"
      disabled=""
      fill="#c25400"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: true, validationState: 'default' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #0073b6;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #0073b6;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2"
      disabled=""
      fill="#0073b6"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;

exports[`RadioButton colors renders correct colors for { disabled: true, checked: true, validationState: 'warning' } 1`] = `
.c0 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border-style: solid;
  border-width: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 25px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
  min-width: 25px;
}

.c4:before {
  background-color: transparent;
  border-radius: 50%;
  content: '';
  display: block;
  height: 13px;
  width: 13px;
  -webkit-transition: background 0.25s linear;
  transition: background 0.25s linear;
}

.c2 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  pointer-events: none;
  position: absolute;
}

.c2 ~ .c3 {
  border-color: #c25400;
}

.c2:focus ~ .c3 {
  box-shadow: 0 0 3px 3px #83bffc;
}

.c2:checked ~ .c3:before {
  background-color: #c25400;
}

.c2.c2:disabled ~ .c3 {
  border-color: #c5c5c5;
}

.c2.c2:disabled:checked ~ .c3:before {
  background-color: #c5c5c5;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma, sans-serif;
  font-size: 1.125rem;
  font-weight: normal;
  line-height: 1.428;
  margin-right: 15px;
  margin-bottom: 10px;
  position: relative;
  padding: 10px 0 10px 10px;
  text-transform: none;
}

@media (min-width:768px) {
  .c0 {
    margin-right: 20px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 5px 0;
  }
}

<label
  class="c0 c1"
  disabled=""
  for="test-radio"
>
  <div
    class=""
  >
    <input
      checked=""
      class="c2"
      disabled=""
      fill="#c25400"
      id="test-radio"
      name=""
      type="radio"
    />
    <span
      class="c3 c4 es-radio__fill"
    />
  </div>
  Option
</label>
`;
